--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^6.1.9",
-    "@mui/material": "^6.1.9",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/lab": "^6.0.0-beta.18",
+    "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@nextui-org/card": "^2.0.34",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-type-animation": "^3.2.0",
+    "react-typed": "^2.0.12",
+    "react-typical": "^0.1.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "rsuite": "^5.74.2",
     "styled-components": "^6.1.13",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
