--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/react-slick": "^1.1.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
@@ -13,10 +14,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
@@ -25,6 +28,7 @@
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "rsuite": "^5.74.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
