Add Stats and Tech Card

--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "@mui/lab": "^6.0.0-beta.18",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@mui/x-charts": "^7.23.1",
     "@nextui-org/card": "^2.0.34",
+    "@react-three/drei": "^9.120.1",
+    "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
+    "leetcode-query": "^1.2.3",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
+    "react-gauge-component": "^1.2.62",
+    "react-leetcode": "^1.0.3",
+    "react-parallax-tilt": "^1.7.262",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
@@ -30,6 +38,7 @@
     "rsuite": "^5.74.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "three": "^0.171.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
